--- a/thorax.css
+++ b/thorax.css
@@ -289,8 +289,9 @@ img{
 }
 
 nav{
+  width: 100%;
+  height: 100px;
   display: flex;
-  padding: 20px 35px;
   justify-content: space-between;
   align-items: center;
 }
@@ -299,7 +300,7 @@ nav img{
   width: 250px;
   cursor: pointer;
   top: 1;
-  transform: translateY(-55px);
+  transform: translateY(20px);
 }
 
 .nav_links{
@@ -313,7 +314,7 @@ nav img{
   display: inline-block;
   padding: 8px 12px;
   position: relative;
-  transform: translateY(-65px);
+  transform: translateY(5px);
 }
 
 .nav_links ul li a{
